<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appify.sourabh.androidtipcalculator.PizzaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/original_total"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/pizzaEditText"
                style="@style/EditTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp">
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/poorRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poor"/>
                <RadioButton
                    android:id="@+id/commonRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common"/>
                <RadioButton
                    android:id="@+id/excellentRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/excellent"/>
            </RadioGroup>
        </LinearLayout>
        <CheckBox
            android:id="@+id/badWeatherCheckBox"
            style="@style/CheckboxLayoutStyle"
            android:layout_height="wrap_content"
            android:text="@string/bad_weather"/>
        <CheckBox
            android:id="@+id/reallyBadWeatherCheckBox"
            style="@style/CheckboxLayoutStyle"
            android:layout_height="wrap_content"
            android:text="@string/really_bad_weather"/>
        <CheckBox
            android:id="@+id/threeMileCheckBox"
            style="@style/CheckboxLayoutStyle"
            android:layout_height="wrap_content"
            android:text="@string/more_than_3miles"/>
        <CheckBox
            android:id="@+id/fiveMileCheckBox"
            style="@style/CheckboxLayoutStyle"
            android:layout_height="wrap_content"
            android:text="@string/more_than_5miles"/>
        <CheckBox
            android:id="@+id/minimumCheckBox"
            style="@style/CheckboxLayoutStyle"
            android:layout_height="wrap_content"
            android:text="@string/minimum_tipping_rule"/>
        <CheckBox
            android:id="@+id/largeOrderCheckBox"
            style="@style/CheckboxLayoutStyle"
            android:layout_height="wrap_content"
            android:text="@string/large_order"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:layout_height="wrap_content"
                android:text="@string/total_tip"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/pizzaTipEditText"
                android:layout_height="wrap_content"
                style="@style/NonEditTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/grand_total"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/pizzaTotalEditText"
                android:layout_height="match_parent"
                style="@style/NonEditTextStyle"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
