<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.appify.sourabh.androidtipcalculator.RestaurantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/totalBillTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:text="@string/total_bill"/>
            <EditText
                android:id="@+id/billEditText"
                style="@style/EditTextStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tipPercentTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/tip_percent"/>

            <TextView
                android:id="@+id/percentTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@id/tipPercentTextView"
                android:layout_margin="16dp"
                android:text="16%"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <SeekBar
                    android:id="@+id/tipSeekBar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:splitTrack="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:id="@+id/fifteenPercent"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_alignParentLeft="@id/tipSeekBar"
                    android:layout_below="@id/tipSeekBar"
                    android:text="15%"/>

                <TextView
                    android:id="@+id/twentyFivePercent"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tipSeekBar"
                    android:text="25%"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/totalTipTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/total_tip"/>
            <EditText
                android:id="@+id/totalTipEditText"
                style="@style/NonEditTextStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/taxTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/total_tax"/>

            <EditText
                android:id="@+id/taxEditText"
                style="@style/EditTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/totalTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/grand_total"/>
            <EditText
                android:id="@+id/totalEditText"
                style="@style/NonEditTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/split"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/ways_to_split"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/splitSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:entries="@array/split_values"></Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/splitAmountTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/split_amount"/>
            <EditText
                android:id="@+id/splitAmountEditText"
                style="@style/NonEditTextStyle"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
